# Shape_Signature_app

./: .gitignore  README.md
preprocessing/: benchmark_components.py  benchmark_improved.py  benchmark_knn.py  generate_descriptors.py  run_pipeline.sh  validate_model.py
shape_signature_app/: .flutter-plugins-dependencies  pubspec.yaml
shape_signature_app/.dart_tool/: package_config.json  package_graph.json
shape_signature_app/android/: settings.gradle
shape_signature_app/android/app/: build.gradle
shape_signature_app/android/app/src/main/: AndroidManifest.xml
shape_signature_app/android/app/src/main/cpp/: CMakeLists.txt  native_processor.cpp  native_processor.h
shape_signature_app/android/app/src/main/java/com/shapesignature/app/: MainActivity.kt
shape_signature_app/assets/: descriptors.json
shape_signature_app/lib/: classifier.dart  leaf_classifier_screen.dart  main.dart  native_bridge.dart
